--- a/packages/full_sdk/package.json
+++ b/packages/full_sdk/package.json
@@ -11,10 +11,10 @@
     "node": ">= 4.x"
   },
   "dependencies": {
-    "aws-xray-sdk-core": "^2.2.0",
-    "aws-xray-sdk-express": "^2.2.0",
-    "aws-xray-sdk-mysql": "^2.2.0",
-    "aws-xray-sdk-postgres": "^2.2.0",
+    "@wmp-sbd/aws-xray-sdk-core": "^2.2.0",
+    "@wmp-sbd/aws-xray-sdk-express": "^2.2.0",
+    "@wmp-sbd/aws-xray-sdk-mysql": "^2.2.0",
+    "@wmp-sbd/aws-xray-sdk-postgres": "^2.2.0",
     "pkginfo": "^0.4.0"
   },
   "keywords": [
