--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "license": "Apache-2.0",
   "devDependencies": {
-    "aws-xray-sdk-core": "^2.0.1",
+    "@wmp-sbd/aws-xray-sdk-core": "^2.2.1",
     "chai": "^3.5.0",
     "eslint": "^3.10.2",
     "grunt": "^1.0.3",
